RESOLVED FIXED Bug 101911
[Cairo] fillRectWithColor with Color::transparent doesn't perform anything
https://bugs.webkit.org/show_bug.cgi?id=101911
Summary [Cairo] fillRectWithColor with Color::transparent doesn't perform anything
Hurnjoo Lee
Reported 2012-11-12 02:14:55 PST
fillRectWithColor with Color::transparent doesn't perform anything because fillRectWithColor does early-return if the alpha value of color is zero. But we expect that fill the rect with transparent color in case the cairo_operator is CAIRO_OPERATOR_SOURCE.
Attachments
proposed patch (1.76 KB, patch)
2012-11-12 02:17 PST, Hurnjoo Lee
no flags
Hurnjoo Lee
Comment 1 2012-11-12 02:17:18 PST
Created attachment 173591 [details] proposed patch
Dominik Röttsches (drott)
Comment 2 2012-11-12 07:24:16 PST
Comment on attachment 173591 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=173591&action=review > Source/WebCore/ChangeLog:13 > + Covered by existing tests. Do you have an example? Which test is passing with this change, or in other words: What was broken before?
Hurnjoo Lee
Comment 3 2012-11-12 23:40:26 PST
(In reply to comment #2) > (From update of attachment 173591 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=173591&action=review > > > Source/WebCore/ChangeLog:13 > > + Covered by existing tests. > > Do you have an example? Which test is passing with this change, or in other words: What was broken before? I wrote it in meaning that do not affect to existing test. If there is any problem in this expression, I will revise it. Actually, the problem is occurred in case using TextureMapper on WebKit2 EFL port. In UpdateAtlas::beginPaintingOnAvailableBuffer, in case of using GraphicsContextCairo (EFL or GTK), doesn't fill the reused area with transparent color.
Dominik Röttsches (drott)
Comment 4 2012-11-13 06:05:05 PST
(In reply to comment #3) > I wrote it in meaning that do not affect to existing test. If there is any problem in this expression, I will revise it. > Actually, the problem is occurred in case using TextureMapper on WebKit2 EFL port. > In UpdateAtlas::beginPaintingOnAvailableBuffer, in case of using GraphicsContextCairo (EFL or GTK), doesn't fill the reused area with transparent color. Thanks, I understand. If there is such an actual problem - as you describe -please provide a layout test exactly reproducing this problem or provide convincing reasoning why it's not possible to create such a regression test.
Kenneth Rohde Christiansen
Comment 5 2012-11-26 10:03:27 PST
Comment on attachment 173591 [details] proposed patch This fixes 103081!
Dominik Röttsches (drott)
Comment 6 2012-11-26 10:05:21 PST
Please consider creating a regression test for this.
Kenneth Rohde Christiansen
Comment 7 2012-11-26 10:06:20 PST
Btw I would love if someone could performance test fillRect (transparent) vs clearRect!
WebKit Review Bot
Comment 8 2012-11-26 10:50:40 PST
Comment on attachment 173591 [details] proposed patch Clearing flags on attachment: 173591 Committed r135737: <http://trac.webkit.org/changeset/135737>
WebKit Review Bot
Comment 9 2012-11-26 10:50:44 PST
All reviewed patches have been landed. Closing bug.
Yael
Comment 10 2012-11-26 10:57:50 PST
(In reply to comment #5) > (From update of attachment 173591 [details]) > This fixes 103081! Also https://bugs.webkit.org/show_bug.cgi?id=102989
Note You need to log in before you can comment on or make changes to this bug.