[Cairo] fillRectWithColor with Color::transparent doesn't perform anything https://bugs.webkit.org/show_bug.cgi?id=101911

Patch by Hurnjoo Lee <hurnjoo.lee@samsung.com> on 2012-11-26
Reviewed by Kenneth Rohde Christiansen.

fillRectWithColor with Color::transparent doesn't perform anything
because fillRectWithColor does early-return if the alpha value of
color is zero. But we expect that fill the rect with transparent color
in case the cairo_operator is CAIRO_OPERATOR_SOURCE.

Covered by existing tests.

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::fillRectWithColor):Add condition to prevent early-return if
cairo_operator is not CAIRO_OPERATOR_OVER

Canonical link: https://commits.webkit.org/121397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135737 268f45cc-cd09-0410-ab3c-d52691b4dbfc